WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281741
[scroll-animations] WPT test `scroll-animations/scroll-timelines/setting-timeline.tentative.html` is a crash
https://bugs.webkit.org/show_bug.cgi?id=281741
Summary
[scroll-animations] WPT test `scroll-animations/scroll-timelines/setting-time...
Antoine Quint
Reported
2024-10-18 04:37:31 PDT
The WPT test `scroll-animations/scroll-timelines/setting-timeline.tentative.html` crashes.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-18 04:37:43 PDT
<
rdar://problem/138178537
>
Antoine Quint
Comment 2
2024-10-18 04:42:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35424
EWS
Comment 3
2024-10-18 06:43:09 PDT
Committed
285396@main
(fd1445729caf): <
https://commits.webkit.org/285396@main
> Reviewed commits have been landed. Closing PR #35424 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug