[scroll-animations] WPT test `scroll-animations/scroll-timelines/setting-timeline.tentative.html` is a crash https://bugs.webkit.org/show_bug.cgi?id=281741 rdar://138178537

Reviewed by Anne van Kesteren.

There were two issues in this test:

1. we would attempt to run an accelerated effect for an animation associated with a
progress-based timeline, which we simply do not support,
2. we would cache the end time of an animation under `setTimeline()` which lead to
incompatible time values as the timeline would switch between progress-based and
monotonic timelines.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/setting-timeline.tentative-expected.txt:
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::animationTimelineDidChange):
(WebCore::KeyframeEffect::canBeAccelerated const):
* Source/WebCore/animation/KeyframeEffect.h:
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::setTimeline):

Canonical link: https://commits.webkit.org/285396@main